--- a/gym_tracker/buildspec.yml
+++ b/gym_tracker/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      python: 3.9 # Specify the Python version used in your project
+      python: 3.9
     commands:
       - echo "Installing dependencies"
       - pip install -r requirements.txt
@@ -19,10 +19,7 @@ phases:
     commands:
       - echo "Collecting static files"
       - python manage.py collectstatic --noinput
-      - echo "Zipping project files"
-      - zip -r django-artifacts.zip . # Adjust as needed for deployment
 artifacts:
   files:
-    - django-artifacts.zip
-    - '**/*' # Include all project files if required
+    - '**/*'
   discard-paths: no
