--- a/gym_tracker/buildspec.yml
+++ b/gym_tracker/buildspec.yml
@@ -1,26 +1,21 @@
-version: 0.1
+version: 0.1 
 
-phases:
-  install:
-    runtime-versions:
-      python: 3.9
-    commands:
-      - echo "Installing dependencies"
-      - pip install -r requirements.txt
-  pre_build:
-    commands:
-      - echo "Running database migrations"
-      - python manage.py migrate
-  build:
-    commands:
-      - echo "Running tests"
-      - python manage.py test
-  post_build:
-    commands:
-      - echo "Collecting static files"
-      - python manage.py collectstatic --noinput
-
-artifacts:
-  files:
-    - '**/*'
-  discard-paths: no
+environment_variables: 
+   plaintext: 
+     DJANGO_SETTINGS_MODULE: config.settings.test 
+     SECRET_KEY: nosecret 
+     DATABASE_DEFAULT_URL: sqlite:///db1.sqlite3 
+     DATABASE_STREAMDATA_URL: sqlite:///db2.sqlite3 
+     OPBEAT_ENABLED: False 
+phases: 
+  pre_build: 
+    commands: 
+      - echo Prebuild ops 
+      - pip3 install -r requirements.txt 
+  build: 
+    commands: 
+      - echo Building the application 
+      - python manage.py runserver 
+  post_build: 
+    commands: 
+      - echo Build completed on `date`
