--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,5 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: gym_tracker.wsgi:application
+    WSGIPath: gym_tracker.gym_tracker.wsgi:application
     
     
