--- a/gym_tracker/Procfile
+++ b/gym_tracker/Procfile
@@ -1,3 +1,3 @@
-web: gunicorn gym_tracker.wsgi:application --bind 0.0.0.0:8000
+web: gunicorn gym_tracker.gym_tracker.wsgi:application --bind 0.0.0.0:8000
 
  
